# nqrduck

./: .gitignore  CHANGELOG.md  LICENSE  README.md  configuration.ini  pyproject.toml
.forgejo/workflows/: main.yml  python-publish.yml  ubuntu-python-package.yml
.github/workflows/: main.yml  python-publish.yml  ubuntu-python-package.yml
src/NQRduck/contrib/: mplwidget.py
src/NQRduck/module/: module_model.py  module_view.py
src/nqrduck/: __init__.py  __main__.py
src/nqrduck/assets/: animations.py  icons.py
src/nqrduck/contrib/: mplwidget.py
src/nqrduck/core/: install_wizard.py  main_controller.py  main_model.py  main_view.py  main_window.py  splash_screen.py
src/nqrduck/core/resources/: main_window.ui
src/nqrduck/helpers/: duckwidgets.py  formbuilder.py  functions.py  serializer.py  signalprocessing.py  unitconverter.py  validators.py
src/nqrduck/module/: __init__.py  module.py  module_controller.py  module_model.py  module_view.py
tests/: test_load_module.py
