[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "nqrduck"
version = "0.0.2"
authors = [
  { name="Julia Pfitzer", email="git@jupfi.me" },
]

description = "Simple Python script to interact with various python modules used for NQR spectroscopy."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib",
    "pyqt6",
    "pyyaml",
]

[project.optional-dependencies]
all = [
    "nqrduck[nqrduck-spectrometer]",
    "nqrduck[nqrduck-broadband]",
    "nqrduck[nqrduck-spectrometer-limenqr]",
    "nqrduck[nqrduck-spectrometer-scout]",
    "nqrduck[nqrduck-pulseprogrammer]",
]
nqrduck-spectrometer = [
    "nqrduck-spectrometer @ git+https://github.com/jupfi/nqrduck-spectrometer.git",
]
nqrduck-broadband = [
    "nqrduck-broadband @ git+https://github.com/jupfi/nqrduck-broadband.git",
]
nqrduck-spectrometer-limenqr = [
    "nqrduck-spectrometer-limenqr @ git+https://github.com/jupfi/nqrduck-spectrometer-limenqr.git",
]
nqrduck-spectrometer-scout = [
    "nqrduck-spectrometer-scout @ git+https://github.com/jupfi/nqrduck-spectrometer-scout.git",
]
nqrduck-pulseprogrammer = [
    "nqrduck-pulseprogrammer @ git+https://github.com/jupfi/nqrduck-pulseprogrammer.git",
]

[project.gui-scripts]
nqrduck = "nqrduck.__main__:main"