[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "nqrduck"
version = "0.0.3"
authors = [
  { name="Julia Pfitzer", email="git@jupfi.me" },
]

description = "Simple Python script to interact with various python modules used for NQR spectroscopy."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib",
    "pyqt6",
    "pyyaml",
]

[project.optional-dependencies]
all = [
    "nqrduck[nqrduck-spectrometer]",
    "nqrduck[nqrduck-broadband]",
    "nqrduck[nqrduck-spectrometer-limenqr]",
    "nqrduck[nqrduck-spectrometer-scout];(sys_platform == 'win32')",
    "nqrduck[nqrduck-pulseprogrammer]",
    "nqrduck[nqrduck-measurement]",
    "nqrduck[nqrduck-autotm]",
    "nqrduck[nqrduck-spectrometer-simulator]",
]
base = [
    "nqrduck[nqrduck-spectrometer]",
    "nqrduck[nqrduck-broadband]",
    "nqrduck[nqrduck-pulseprogrammer]",
    "nqrduck[nqrduck-measurement]",
    "nqrduck[nqrduck-spectrometer-simulator]",
]


nqrduck-spectrometer = [
    "nqrduck-spectrometer @ git+https://github.com/nqrduck/nqrduck-spectrometer.git",
]
nqrduck-broadband = [
    "nqrduck-broadband @ git+https://github.com/nqrduck/nqrduck-broadband.git",
]
nqrduck-spectrometer-limenqr = [
    "nqrduck-spectrometer-limenqr @ git+https://github.com/nqrduck/nqrduck-spectrometer-limenqr.git",
]
nqrduck-spectrometer-scout = [
    'nqrduck-spectrometer-scout @ git+https://github.com/nqrduck/nqrduck-spectrometer-scout.git',
]
nqrduck-pulseprogrammer = [
    "nqrduck-pulseprogrammer @ git+https://github.com/nqrduck/nqrduck-pulseprogrammer.git",
]
nqrduck-measurement = [
    "nqrduck-measurement @ git+https://github.com/nqrduck/nqrduck-measurement.git",
]
nqrduck-autotm = [
    "nqrduck-autotm @ git+https://github.com/nqrduck/nqrduck-autotm",
]
nqrduck-spectrometer-simulator = [
    "nqrduck-spectrometer-simulator @ git+https://github.com/nqrduck/nqrduck-spectrometer-simulator",
]
nqrduck-module = [
    "nqrduck-module @ git+https://github.com/nqrduck/nqrduck-module",
]

[project.gui-scripts]
nqrduck = "nqrduck.__main__:main"
